// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComposableTemplatesActions /> spec renders the component in edit mode 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 10px;"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle euiTitle--small"
        >
          Template settings
          <span
            class="panel-header-count"
          >
             
             
          </span>
        </h1>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: 0px 10px;"
    >
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiDescribedFormGroup euiDescribedFormGroup--fullWidth"
        role="group"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
            style="max-width: 700px;"
          >
            <div
              class="euiTitle euiTitle--xsmall euiDescribedFormGroup__title"
            >
              Template type
            </div>
          </div>
          <div
            class="euiFlexItem euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
          >
            <div
              class="euiFormRow"
              data-test-subj="form-row-data_stream"
              id="some_html_id-row"
            >
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiRadio"
                >
                  <input
                    checked=""
                    class="euiRadio__input"
                    id="Indexes"
                    type="radio"
                    value=""
                  />
                  <div
                    class="euiRadio__circle"
                  />
                  <label
                    class="euiRadio__label"
                    for="Indexes"
                  >
                    Indexes
                  </label>
                </div>
                <div
                  class="euiRadio"
                >
                  <input
                    class="euiRadio__input"
                    id="Data streams"
                    type="radio"
                    value=""
                  />
                  <div
                    class="euiRadio__circle"
                  />
                  <label
                    class="euiRadio__label"
                    for="Data streams"
                  >
                    Data streams
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiDescribedFormGroup euiDescribedFormGroup--fullWidth"
        role="group"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
            style="max-width: 700px;"
          >
            <div
              class="euiTitle euiTitle--xsmall euiDescribedFormGroup__title"
            >
              Index patterns
            </div>
            <div
              class="euiText euiText--small euiDescribedFormGroup__description"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                Specify the index patterns or wildcards. Add a comma to separate each value. Settings in this template will be applied to indexes with names matching index patterns or wildcards.
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
          >
            <div
              class="euiFormRow"
              data-test-subj="form-row-index_patterns"
              id="some_html_id-row"
            >
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="euiComboBox"
                  role="combobox"
                >
                  <div
                    class="euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper"
                    >
                      <div
                        class="euiComboBox__inputWrap euiComboBox__inputWrap-isClearable"
                        data-test-subj="comboBoxInput"
                        tabindex="-1"
                      >
                        <p
                          class="euiComboBoxPlaceholder"
                        >
                          Select index patterns or input wildcards
                        </p>
                        <div
                          class="euiComboBox__input"
                          style="font-size: 14px; display: inline-block;"
                        >
                          <input
                            aria-controls=""
                            data-test-subj="comboBoxSearchInput"
                            id="some_html_id"
                            role="textbox"
                            style="box-sizing: content-box; width: 2px;"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiDescribedFormGroup euiDescribedFormGroup--fullWidth"
        role="group"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
            style="max-width: 700px;"
          >
            <div
              class="euiTitle euiTitle--xsmall euiDescribedFormGroup__title"
            >
              Priority
            </div>
            <div
              class="euiText euiText--small euiDescribedFormGroup__description"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                Specify the priority of this template. If the index name matches more than one template, the template with the highest priority will be applied to the index.
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
          >
            <div
              class="euiFormRow"
              data-test-subj="form-row-priority"
              id="some_html_id-row"
            >
              <div
                class="euiFormRow__fieldWrapper"
              >
                <span
                  class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
                >
                  <div
                    class="euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        class="euiFieldNumber"
                        id="some_html_id"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFormRow euiFormRow--fullWidth"
        data-test-subj="form-row-_meta.flow"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="some_html_id"
          >
            Choose a method to define your template
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
              style="width: 350px;"
            >
              <div
                class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard eui-fullHeight"
              >
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
                >
                  <div
                    class="euiRadio euiRadio--noLabel"
                  >
                    <input
                      class="euiRadio__input"
                      id="checkboxForIndexTemplateFlowSimple"
                      type="radio"
                      value=""
                    />
                    <div
                      class="euiRadio__circle"
                    />
                  </div>
                </div>
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                >
                  <label
                    class="euiCheckableCard__label"
                    for="checkboxForIndexTemplateFlowSimple"
                  >
                    <div
                      class="euiCheckableCard__label"
                      style="padding-right: 0px;"
                    >
                      Simple template
                    </div>
                    <div
                      class="euiText euiText--extraSmall euiCheckableCard__children"
                    >
                      <span
                        class="euiTextColor euiTextColor--subdued"
                      >
                        Define an index template with index aliases, settings, and mappings.
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
              style="width: 350px;"
            >
              <div
                class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard eui-fullHeight"
              >
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
                >
                  <div
                    class="euiRadio euiRadio--noLabel"
                  >
                    <input
                      class="euiRadio__input"
                      id="checkboxForIndexTemplateFlowComponents"
                      type="radio"
                      value=""
                    />
                    <div
                      class="euiRadio__circle"
                    />
                  </div>
                </div>
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                >
                  <label
                    class="euiCheckableCard__label"
                    for="checkboxForIndexTemplateFlowComponents"
                  >
                    <div
                      class="euiCheckableCard__label"
                      style="padding-right: 0px;"
                    >
                      Component template
                    </div>
                    <div
                      class="euiText euiText--extraSmall euiCheckableCard__children"
                    >
                      <span
                        class="euiTextColor euiTextColor--subdued"
                      >
                        Define an index template by associating component templates containing index configurations.
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    data-test-subj="submit"
  >
    submit
  </button>
</div>
`;

exports[`<ComposableTemplatesActions /> spec renders the component in non-edit mode 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 10px;"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle euiTitle--small"
        >
          Template settings
          <span
            class="panel-header-count"
          >
             
             
          </span>
        </h1>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: 0px 10px;"
    >
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow"
        data-test-subj="form-row-name"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="some_html_id"
          >
            Template name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormHelpText euiFormRow__text"
            style="padding-top: 0px; padding-bottom: 4px;"
          >
            <div>
              Template name cannot be changed after the template is created.
            </div>
          </div>
          <span
            class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
          >
            <div
              class="euiFormControlLayout"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  class="euiFieldText"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="euiFormRow"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormHelpText euiFormRow__text"
            style="padding-top: 0px; padding-bottom: 4px;"
          >
            <div>
              Must be in lowercase letters. Cannot begin with underscores. Spaces, commas, and characters *, # are not allowed.
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFormRow"
        data-test-subj="form-row-data_stream"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="some_html_id"
          >
            Template type
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiRadio"
          >
            <input
              checked=""
              class="euiRadio__input"
              id="Indexes"
              type="radio"
              value=""
            />
            <div
              class="euiRadio__circle"
            />
            <label
              class="euiRadio__label"
              for="Indexes"
            >
              Indexes
            </label>
          </div>
          <div
            class="euiRadio"
          >
            <input
              class="euiRadio__input"
              id="Data streams"
              type="radio"
              value=""
            />
            <div
              class="euiRadio__circle"
            />
            <label
              class="euiRadio__label"
              for="Data streams"
            >
              Data streams
            </label>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFormRow"
        data-test-subj="form-row-index_patterns"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="some_html_id"
          >
            Index patterns
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormHelpText euiFormRow__text"
            style="padding-top: 0px; padding-bottom: 4px;"
          >
            Specify the index patterns or wildcards. Add a comma to separate each value. Settings in this template will be applied to indexes with names matching index patterns or wildcards.
          </div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox"
            role="combobox"
          >
            <div
              class="euiFormControlLayout"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <p
                    class="euiComboBoxPlaceholder"
                  >
                    Select index patterns or input wildcards
                  </p>
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFormRow"
        data-test-subj="form-row-priority"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="some_html_id"
          >
            Priority
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormHelpText euiFormRow__text"
            style="padding-top: 0px; padding-bottom: 4px;"
          >
            Specify the priority of this template. If the index name matches more than one template, the template with the highest priority will be applied to the index.
          </div>
          <span
            class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
          >
            <div
              class="euiFormControlLayout"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  class="euiFieldNumber"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFormRow euiFormRow--fullWidth"
        data-test-subj="form-row-_meta.flow"
        id="some_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="some_html_id"
          >
            Choose a method to define your template
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
              style="width: 350px;"
            >
              <div
                class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard eui-fullHeight"
              >
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
                >
                  <div
                    class="euiRadio euiRadio--noLabel"
                  >
                    <input
                      class="euiRadio__input"
                      id="checkboxForIndexTemplateFlowSimple"
                      type="radio"
                      value=""
                    />
                    <div
                      class="euiRadio__circle"
                    />
                  </div>
                </div>
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                >
                  <label
                    class="euiCheckableCard__label"
                    for="checkboxForIndexTemplateFlowSimple"
                  >
                    <div
                      class="euiCheckableCard__label"
                      style="padding-right: 0px;"
                    >
                      Simple template
                    </div>
                    <div
                      class="euiText euiText--extraSmall euiCheckableCard__children"
                    >
                      <span
                        class="euiTextColor euiTextColor--subdued"
                      >
                        Define an index template with index aliases, settings, and mappings.
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
              style="width: 350px;"
            >
              <div
                class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard eui-fullHeight"
              >
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
                >
                  <div
                    class="euiRadio euiRadio--noLabel"
                  >
                    <input
                      class="euiRadio__input"
                      id="checkboxForIndexTemplateFlowComponents"
                      type="radio"
                      value=""
                    />
                    <div
                      class="euiRadio__circle"
                    />
                  </div>
                </div>
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                >
                  <label
                    class="euiCheckableCard__label"
                    for="checkboxForIndexTemplateFlowComponents"
                  >
                    <div
                      class="euiCheckableCard__label"
                      style="padding-right: 0px;"
                    >
                      Component template
                    </div>
                    <div
                      class="euiText euiText--extraSmall euiCheckableCard__children"
                    >
                      <span
                        class="euiTextColor euiTextColor--subdued"
                      >
                        Define an index template by associating component templates containing index configurations.
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    data-test-subj="submit"
  >
    submit
  </button>
</div>
`;

exports[`<ComposableTemplatesActions /> spec renders the component in readonly mode 1`] = `
<div>
  <button
    data-test-subj="submit"
  >
    submit
  </button>
</div>
`;
